--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,9 +24,13 @@ spring:
   sql:
     init:
       mode: always
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
 
 server:
-  port: ${PORT:8080}
+  port: ${PORT:8081}
 
 face:
   service:
@@ -46,3 +50,6 @@ management:
 
 jwt:
   secret: ${JWT_SECRET_KEY}
+
+photo-recognition:
+  url: ${PHOTO_RECOGNITION_API_URL}
